k8s/nginx-data-io-ing.yaml

apiVersion: v1
kind: Service
metadata:
    name: go-data-connector
spec:
    selector:
      app: go-data-connector
      tier: backend
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 1323
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-data-connector
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - data-connector.symper.vn
    secretName: symper-tls
  rules:
  - host: data-connector.symper.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: go-data-connector
             port:
                number: 80
